--- a/src/components/page/Header/Header.module.css
+++ b/src/components/page/Header/Header.module.css
@@ -9,6 +9,11 @@
     transition: var(--transition);
 }
 
+.header.scrolling {
+    border-bottom: 1px solid var(--color-grayish-blue);
+    padding-block: 12px;
+}
+
 .header__container {
     display: flex;
     align-items: center;
@@ -125,7 +130,7 @@
 }
 
 @media screen and (min-width: 992px) {
-    .header {
+    .header, .header.scrolling {
         position: static;
         padding: 0;
     }
